refactor(webapp): move AppSelector to not talk to the store directly (#1809)

--- a/webapp/javascript/components/AppSelector/AppSelector.module.scss
+++ b/webapp/javascript/components/AppSelector/AppSelector.module.scss
@@ -5,15 +5,11 @@
   align-items: center;
   position: relative;
 
-  .refreshButton {
-    margin-left: 5px;
-  }
-
   .appSelectorModal {
     height: auto;
     width: auto;
     right: unset;
-    left: -100px;
+    left: -100px; // Refers to the width of the "Application" label
     z-index: 999;
     max-width: calc(100vw - 290px);
   }
