chore(webapp): allow overriding app selector in other places too

--- a/webapp/javascript/components/AppSelector/AppSelector.module.scss
+++ b/webapp/javascript/components/AppSelector/AppSelector.module.scss
@@ -15,6 +15,7 @@
   }
 
   .headerTitle {
+    text-transform: uppercase;
     margin-left: 10px;
     color: var(--ps-select-modal-title);
     font-weight: 700;
