--- a/pkg/api/index.gohtml
+++ b/pkg/api/index.gohtml
@@ -1,4 +1,4 @@
-{{- /*gotype: github.com/grafana/phlare/pkg/api.indexPageContents */ -}}
+{{- /*gotype: github.com/grafana/pyroscope/pkg/api.indexPageContents */ -}}
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Grafana Phlare</title>
+    <title>Grafana Pyroscope</title>
 
     <link rel="stylesheet" href="{{ AddPathPrefix "/static/bootstrap-5.1.3.min.css" }}">
-    <link rel="stylesheet" href="{{ AddPathPrefix "/static/phlare-styles.css" }}">
+    <link rel="stylesheet" href="{{ AddPathPrefix "/static/pyroscope-styles.css" }}">
     <script src="{{ AddPathPrefix "/static/bootstrap-5.1.3.bundle.min.js" }}"></script>
 </head>
 <body>
 <div class="d-flex flex-column container py-3">
     <div class="header row border-bottom py-3 flex-column-reverse flex-sm-row">
         <div class="col-12 col-sm-9 text-center text-sm-start">
-            <h1>Grafana Phlare Admin</h1>
+            <h1>Grafana Pyroscope Admin</h1>
         </div>
         <div class="col-12 col-sm-3 text-center text-sm-end mb-3 mb-sm-0">
             <a href="{{AddPathPrefix "/"}}">
-                 <img alt="Phlare logo" class="phlare-brand" src="{{ AddPathPrefix "/static/phlare-logo.png" }}">
+                 <img alt="pyroscope logo" class="pyroscope-brand" src="{{ AddPathPrefix "/static/pyroscope-logo.png" }}">
             </a>
         </div>
     </div>
