--- a/pkg/api/static/pyroscope-styles.css
+++ b/pkg/api/static/pyroscope-styles.css
@@ -7,18 +7,18 @@ a:hover, a:active {
     text-decoration: underline;
 }
 
-.header .phlare-brand {
+.header .pyroscope-brand {
     max-width: 150px;
 }
 
 @media (min-width: 576px) {
-    .header .phlare-brand {
+    .header .pyroscope-brand {
         max-height: calc(1.375rem + 1.5vw); /* same as h1 font-size */
     }
 }
 
 @media (min-width: 1200px) {
-    .header .phlare-brand {
+    .header .pyroscope-brand {
         max-height: 2.5rem; /* same as h1 font-size */
     }
 }
