--- a/pkg/api/memberlist_status.gohtml
+++ b/pkg/api/memberlist_status.gohtml
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Memberlist: Grafana Phlare</title>
+    <title>Memberlist: Grafana Pyroscope</title>
 
     <link rel="stylesheet" href="{{ AddPathPrefix "/static/bootstrap-5.1.3.min.css" }}">
     <link rel="stylesheet" href="{{ AddPathPrefix "/static/bootstrap-icons-1.8.1.css" }}">
-    <link rel="stylesheet" href="{{ AddPathPrefix "/static/phlare-styles.css" }}">
+    <link rel="stylesheet" href="{{ AddPathPrefix "/static/pyroscope-styles.css" }}">
     <script src="{{ AddPathPrefix "/static/bootstrap-5.1.3.bundle.min.js" }}"></script>
 </head>
 <body class="d-flex flex-column h-100">
@@ -18,11 +18,11 @@
     <div class="container">
         <div class="header row border-bottom py-3 flex-column-reverse flex-sm-row">
             <div class="col-12 col-sm-9 text-center text-sm-start">
-                <h1>Memberlist: Grafana Phlare</h1>
+                <h1>Memberlist: Grafana Pyroscope</h1>
             </div>
             <div class="col-12 col-sm-3 text-center text-sm-end mb-3 mb-sm-0">
                 <a href="{{AddPathPrefix "/"}}">
-                    <img alt="Phlare logo" class="phlare-brand" src="{{ AddPathPrefix "/static/phlare-logo.png" }}">
+                    <img alt="Pyroscope logo" class="pyroscope-brand" src="{{ AddPathPrefix "/static/pyroscope-logo.png" }}">
                 </a>
             </div>
         </div>
