--- a/cmd/pyroscope/help-all.txt.tmpl
+++ b/cmd/pyroscope/help-all.txt.tmpl
@@ -583,6 +583,8 @@ Usage of ./pyroscope:
     	How often to check runtime config files. (default 10s)
   -self-profiling.block-profile-rate int
     	 (default 5)
+  -self-profiling.disable-push
+    	When running in single binary (--target=all) Pyroscope will push (Go SDK) profiles to itself. Set to true to disable self-profiling.
   -self-profiling.mutex-profile-fraction int
     	 (default 5)
   -server.graceful-shutdown-timeout duration
