--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -153,6 +153,8 @@ Usage of ./pyroscope:
     	Comma separated list of yaml files with the configuration that can be updated at runtime. Runtime config files will be merged from left to right.
   -self-profiling.block-profile-rate int
     	 (default 5)
+  -self-profiling.disable-push
+    	When running in single binary (--target=all) Pyroscope will push (Go SDK) profiles to itself. Set to true to disable self-profiling.
   -self-profiling.mutex-profile-fraction int
     	 (default 5)
   -server.graceful-shutdown-timeout duration
