Fix layout overflow in "Tag Breakdown" table
This commit cleans up the "Tag Breakdown" table by:
  * making each column take up as much space as it needs
  * moving the percentage text to the "Total" column where it feels
    more natural
  * if a cell still doesn't have enough space to render its content,
    it will become scrollable

--- a/public/app/pages/TagExplorerView.module.scss
+++ b/public/app/pages/TagExplorerView.module.scss
@@ -120,11 +120,6 @@ $pieChartWidth: 300px;
           margin-right: 10px;
         }
 
-        .bold {
-          font-weight: bold;
-          white-space: nowrap;
-        }
-
         .label {
           text-align: left;
         }
@@ -136,6 +131,12 @@ $pieChartWidth: 300px;
       border: 1px solid var(--ps-ui-border);
       padding: 4px 10px;
       width: 10%;
+      overflow: auto;
+
+      .bold {
+        font-weight: bold;
+        white-space: nowrap;
+      }
     }
   }
 }
