--- a/cmd/pyroscope/help-all.txt.tmpl
+++ b/cmd/pyroscope/help-all.txt.tmpl
@@ -11,10 +11,6 @@ Usage of ./pyroscope:
     	How frequently to scan the bucket, or to refresh the bucket index (if enabled), in order to look for changes (new blocks shipped by ingesters and blocks deleted by retention or compaction). (default 15m0s)
   -blocks-storage.bucket-store.tenant-sync-concurrency int
     	Maximum number of concurrent tenants synching blocks. (default 10)
-  -client.tenant-id string
-    	Tenant ID to use when pushing profiles to Phlare (default: anonymous). (default "anonymous")
-  -client.url string
-    	URL of log server.
   -config.expand-env
     	Expands ${var} in config according to the values of the environment variables.
   -config.file string
@@ -587,6 +583,8 @@ Usage of ./pyroscope:
     	How often to check runtime config files. (default 10s)
   -self-profiling.block-profile-rate int
     	 (default 5)
+  -self-profiling.disable-push
+    	When running in single binary (--target=all) Pyroscope will push (Go SDK) profiles to itself. Set to true to disable self-profiling.
   -self-profiling.mutex-profile-fraction int
     	 (default 5)
   -server.graceful-shutdown-timeout duration
