--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -5,10 +5,6 @@ Usage of ./pyroscope:
     	When set to true, incoming HTTP requests must specify tenant ID in HTTP X-Scope-OrgId header. When set to false, tenant ID anonymous is used instead.
   -blocks-storage.bucket-store.sync-dir string
     	Directory to store synchronized pyroscope block headers. This directory is not required to be persisted between restarts, but it's highly recommended in order to improve the store-gateway startup time. (default "./data/pyroscope-sync/")
-  -client.tenant-id string
-    	Tenant ID to use when pushing profiles to Phlare (default: anonymous). (default "anonymous")
-  -client.url string
-    	URL of log server.
   -config.expand-env
     	Expands ${var} in config according to the values of the environment variables.
   -config.file string
@@ -157,6 +153,8 @@ Usage of ./pyroscope:
     	Comma separated list of yaml files with the configuration that can be updated at runtime. Runtime config files will be merged from left to right.
   -self-profiling.block-profile-rate int
     	 (default 5)
+  -self-profiling.disable-push
+    	When running in single binary (--target=all) Pyroscope will push (Go SDK) profiles to itself. Set to true to disable self-profiling.
   -self-profiling.mutex-profile-fraction int
     	 (default 5)
   -server.graceful-shutdown-timeout duration
