--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -356,6 +356,6 @@ Usage of ./pyroscope:
   -validation.max-profile-symbol-value-length int
     	Maximum length of a profile symbol value (labels, function names and filenames, etc...). Profiles are not rejected instead symbol values are truncated. 0 to disable. (default 1024)
   -version
-    	Show the version of phlare and exit
+    	Show the version of pyroscope and exit
 
 To see all flags, use -help-all
