chore: more s/phlare/pyroscope/g (#2322)

--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -116,7 +116,7 @@ Usage of ./pyroscope:
   -pyroscopedb.data-path string
     	Directory used for local storage. (default "./data")
   -pyroscopedb.max-block-duration duration
-    	Upper limit to the duration of a Phlare block. (default 3h0m0s)
+    	Upper limit to the duration of a Pyroscope block. (default 3h0m0s)
   -pyroscopedb.row-group-target-size uint
     	How big should a single row group be uncompressed (default 1342177280)
   -querier.client-cleanup-period duration
@@ -356,6 +356,6 @@ Usage of ./pyroscope:
   -validation.max-profile-symbol-value-length int
     	Maximum length of a profile symbol value (labels, function names and filenames, etc...). Profiles are not rejected instead symbol values are truncated. 0 to disable. (default 1024)
   -version
-    	Show the version of phlare and exit
+    	Show the version of pyroscope and exit
 
 To see all flags, use -help-all
