--- a/public/app/sass/profile.scss
+++ b/public/app/sass/profile.scss
@@ -17,6 +17,10 @@ html {
   width: 100vw;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font: 400 16px/1.7 -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
