Fixes mark global path and add 8h compaction range

--- a/cmd/pyroscope/help-all.txt.tmpl
+++ b/cmd/pyroscope/help-all.txt.tmpl
@@ -16,7 +16,7 @@ Usage of ./pyroscope:
   -blocks-storage.bucket-store.tenant-sync-concurrency int
     	Maximum number of concurrent tenants synching blocks. (default 10)
   -compactor.block-ranges value
-    	List of compaction time ranges. (default 4h0m0s)
+    	List of compaction time ranges. (default 4h0m0s,8h0m0s)
   -compactor.block-sync-concurrency int
     	Number of Go routines to use when downloading blocks for compaction and uploading resulting blocks. (default 8)
   -compactor.blocks-retention-period duration
