Add opentracing profiling instrumentation

--- a/cmd/pyroscope/help-all.txt.tmpl
+++ b/cmd/pyroscope/help-all.txt.tmpl
@@ -881,6 +881,8 @@ Usage of ./pyroscope:
     	Comma-separated list of Pyroscope modules to load. The alias 'all' can be used in the list to load a number of core modules and will enable single-binary mode.  (default all)
   -tracing.enabled
     	Set to false to disable tracing. (default true)
+  -tracing.profiling-enabled
+    	[experimental] Set to true to enable profiling integration.
   -usage-stats.enabled
     	Enable anonymous usage reporting. (default true)
   -validation.max-label-names-per-series int
