feat: Scalable Compactor (#2466)
* storage: Refactor block compaction to allow shard-splitting

* Rename to CompactWithSplitting for consistency

* Introduce back compaction series testing.

* Add sharding compaction level

* Add some tests for CompactWithSplitting

* Fix symbols split-compaction (#2371)

* Fixes a race that was actually surfacing another real issue.

* Add a tests for meta min/max time

* Fixes meta min/max after split

* Add mimir compactor code

* Fixing more code

* Introduce a meta fetcher that synchronize filtered metadata of all block locally

* Fixes all tests

* make go/mod

* Adds a tenant scanner

* Working on the blocks cleaner

* Adds bucketindex package

* Fixing and adapting more code

* Add missing minCompactor config

* Fixes as much as possible

* block: Adds Download and MarkForNoCompact

* improve documentation

* wip

* Adds a way to validate local blocks

* fixes wrong merge

* more integration fixes

* fixes metrics namespace

* more fixes

* fixes block_cleaner_test

* remove upload block api

* Fixes split_merge_compactor tests

* Fixes split_merge_compactor tests

* Fixes more tests

* fixing more tests

* Fixes more tests

* Add limits for the compactor

* Removes unused limits and code

* Switches to Compactor interface for mocking

* Fixes blocks_cleaner_test.go

* Removes tombstones removal

* Fixes the compactor shard label not being saved

* Fixes most compactor tests.

* Implement e2e tests

* lint

* Fixes a race detected when generating ULID

* Add the compactor compenent

* Add the compactor helm component

* Fixes tests after the range change

* change: store-gateway uses the bucketindex

Changes the store-gateway to use the bucketindex instead of iterating
through all blocks.
This also tweak block query config.

* Fixes helm to not use a disk

* Use stable time format for logs

* Fixes time format issue

*

--- a/cmd/pyroscope/help.txt.tmpl
+++ b/cmd/pyroscope/help.txt.tmpl
@@ -5,6 +5,32 @@ Usage of ./pyroscope:
     	When set to true, incoming HTTP requests must specify tenant ID in HTTP X-Scope-OrgId header. When set to false, tenant ID anonymous is used instead.
   -blocks-storage.bucket-store.sync-dir string
     	Directory to store synchronized pyroscope block headers. This directory is not required to be persisted between restarts, but it's highly recommended in order to improve the store-gateway startup time. (default "./data/pyroscope-sync/")
+  -compactor.blocks-retention-period duration
+    	Delete blocks containing samples older than the specified retention period. 0 to disable.
+  -compactor.compactor-tenant-shard-size int
+    	Max number of compactors that can compact blocks for single tenant. 0 to disable the limit and use all compactors.
+  -compactor.data-dir string
+    	Directory to temporarily store blocks during compaction. This directory is not required to be persisted between restarts. (default "./data-compactor")
+  -compactor.first-level-compaction-wait-period duration
+    	How long the compactor waits before compacting first-level blocks that are uploaded by the ingesters. This configuration option allows for the reduction of cases where the compactor begins to compact blocks before all ingesters have uploaded their blocks to the storage. (default 25m0s)
+  -compactor.partial-block-deletion-delay duration
+    	If a partial block (unfinished block without meta.json file) hasn't been modified for this time, it will be marked for deletion. The minimum accepted value is 4h0m0s: a lower value will be ignored and the feature disabled. 0 to disable. (default 1d)
+  -compactor.ring.consul.hostname string
+    	Hostname and port of Consul. (default "localhost:8500")
+  -compactor.ring.etcd.endpoints string
+    	The etcd endpoints to connect to.
+  -compactor.ring.etcd.password string
+    	Etcd password.
+  -compactor.ring.etcd.username string
+    	Etcd username.
+  -compactor.ring.instance-interface-names string
+    	List of network interface names to look up when finding the instance IP address. (default [<private network interfaces>])
+  -compactor.ring.store string
+    	Backend storage to use for the ring. Supported values are: consul, etcd, inmemory, memberlist, multi. (default "memberlist")
+  -compactor.split-and-merge-shards int
+    	The number of shards to use when splitting blocks. 0 to disable splitting.
+  -compactor.split-groups int
+    	Number of groups that blocks for splitting should be grouped into. Each group of blocks is then split separately. Number of output split shards is controlled by -compactor.split-and-merge-shards. (default 1)
   -config.expand-env
     	Expands ${var} in config according to the values of the environment variables.
   -config.file string
